--- a/pyproject.toml
+++ b/pyproject.toml
@@ -70,6 +70,6 @@ ignore = ["E722"] # Until bare except blocks get fixed
 
 [tool.pytest.ini_options]
 addopts = "--cov=badger/"
-log_cli_level = "info"
+log_cli_level = "debug"
 log_level = "debug"
 testpaths = ["src/badger/tests"]
