--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -23,7 +23,7 @@ jobs:
       max-parallel: 1
       matrix:
         os: [ubuntu-latest] # TODO: add windows and macos to matrix
-        python-version: ["3.10", "3.11", "3.12"]
+        python-version: ["3.11", "3.12"] # xopt >= 3.0 requires python >= 3.11
     env:
       DISPLAY: ':99.0'
       QT_MAC_WANTS_LAYER: 1  # PyQT gui tests involving qtbot interaction on macOS will fail without this
