--- a/pyproject.toml
+++ b/pyproject.toml
@@ -30,8 +30,11 @@ dependencies = [
     "qdarkstyle>=3.0",
     "pillow",
     "requests",
-    "xopt>=2.6.8",
+    "xopt @ git+https://github.com/xopt-org/Xopt.git@v3.0",
 ]
+# ^ temporarily point to xopt 3.0 brach (revert once it gets merged to main)
+# "xopt>=2.6.8"
+
 dynamic = ["version"]
 [tool.setuptools_scm]
 version_file = "src/badger/_version.py"
